✨ new: PDF support for legislation; but only for full statutess; resolves #38
Squashed commit of the following:

commit 3d3a514bc1be0ee36ea2ecb522940f2a83bce226
Author: Huey <hello@huey.xyz>
Date:   Tue Jun 15 22:15:25 2021 +0800

    ✨ new: PDF support for legislation; but only for full statutes

--- a/src/Popup/QueryResult.scss
+++ b/src/Popup/QueryResult.scss
@@ -65,6 +65,14 @@
           }
         }
 
+        &.empty {
+          a.pdf {
+            >img {
+              margin-left: 0;
+            }
+          }
+        }
+
         +.link {
           margin-left: 1rem;
         }
